deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: invoiceninja
  name: invoiceninja
  namespace: invoiceninja
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: invoiceninja
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: invoiceninja
    spec:
      # Alpine DNS resolve fix: https://github.com/kubernetes/kubernetes/issues/64924#issuecomment-488848061
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: app
        image: invoiceninja/invoiceninja
        imagePullPolicy: Always
        resources: {}
        volumeMounts:
        - mountPath: /var/www/app/storage
          name: invoiceninja
          subPath: storage
        - mountPath: /var/www/app/public/logo
          name: invoiceninja
          subPath: logo
        - mountPath: /var/www/app/public
          name: invoiceninja
          subPath: public
        #WEB
      - name: web
        image: nginx:1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 128Mi
            cpu: 500m
          limits:
            memory: 250Mi
            cpu: 1000m
        volumeMounts:
        - mountPath: /var/www/app/storage
          name: invoiceninja
          subPath: storage
        - mountPath: /var/www/app/public/logo
          name: invoiceninja
          subPath: logo
        - mountPath: /var/www/app/public
          name: invoiceninja
          subPath: public
        - mountPath: /etc/nginx/conf.d/in-vhost.conf
          name: nginx
          subPath: in-vhost.conf
        # Cron
      - name: cron
        args:
        - -c
        - trap "break;exit" SIGHUP SIGINT SIGTERM; sleep 300s; while /bin/true; do
          ./artisan ninja:send-invoices; ./artisan ninja:send-reminders; sleep 1d;
          done
        command:
        - /bin/sh
        image: invoiceninja/invoiceninja
        imagePullPolicy: Always
        resources: {}
        volumeMounts:
        - mountPath: /var/www/app/storage
          name: invoiceninja
          subPath: storage
        - mountPath: /var/www/app/public/logo
          name: invoiceninja
          subPath: logo
        - mountPath: /var/www/app/public
          name: invoiceninja
          subPath: public
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: invoiceninja
        persistentVolumeClaim:
          claimName: invoiceninja-nfs
      - configMap:
          defaultMode: 256
          name: nginx
          optional: false
        name: nginx
