service-invoiceninja.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: invoiceninja
  namespace: invoiceninja
spec:
  clusterIP:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: invoiceninja
  sessionAffinity: None
  type: ClusterIP
